// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Footer component rendering renders Footer in english 1`] = `
<div>
  <footer>
    <div
      class="uber-color2"
    >
      <a
        href="/Contact+FAQ"
      >
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Contact
        </button>
      </a>
      <br />
      <span>
        © 2018 - 
        2020
      </span>
      <br />
      <span>
        Created by Marianne LEVEE & Thomas DEROTE-PARCELLIER 
        <br />
        App icon by 
        <a
          href="https://icones8.fr"
        >
          icons8
        </a>
         
        <br />
      </span>
    </div>
  </footer>
</div>
`;

exports[`Testing the Footer component rendering renders Footer in french 1`] = `
<div>
  <footer>
    <div
      class="uber-color2"
    >
      <a
        href="/Contact+FAQ"
      >
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Contact
        </button>
      </a>
      <br />
      <span>
        © 2018 - 
        2020
      </span>
      <br />
      <span>
        Créé par Marianne LEVEE & Thomas DEROTE-PARCELLIER 
        <br />
        Icônes de l'application par 
        <a
          href="https://icones8.fr"
        >
          icons8
        </a>
         
        <br />
      </span>
    </div>
  </footer>
</div>
`;

exports[`Testing the Footer component rendering renders Footer without crashing 1`] = `
<div>
  <footer>
    <div
      class="uber-color2"
    >
      <a
        href="/Contact+FAQ"
      >
        <button
          class="btn btn-primary button-footer"
          type="button"
        >
          Contact
        </button>
      </a>
      <br />
      <span>
        © 2018 - 
        2020
      </span>
      <br />
      <span>
        Créé par Marianne LEVEE & Thomas DEROTE-PARCELLIER 
        <br />
        Icônes de l'application par 
        <a
          href="https://icones8.fr"
        >
          icons8
        </a>
         
        <br />
      </span>
    </div>
  </footer>
</div>
`;
